// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FLPInput /> > should render as expected 1`] = `
<div>
  <div
    class="d_flex flex-d_column ai_stretch gap_8px w_100%"
  >
    <label
      class="fs_sm fw_medium c_text.primary"
      for="Test"
    >
      Test
    </label>
    <div
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <input
        class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_transparent c_text.primary ring_none trs_all_0.2s focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) disabled:op_0.5 disabled:cursor_not-allowed "
        id="Test"
      />
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with error 1`] = `
<div>
  <div
    class="d_flex flex-d_column ai_stretch gap_8px w_100%"
  >
    <label
      class="fs_sm fw_medium c_text.primary"
      for="Test"
    >
      Test
    </label>
    <div
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <input
        class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_transparent c_text.primary ring_none trs_all_0.2s focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) disabled:op_0.5 disabled:cursor_not-allowed "
        id="Test"
      />
      <span
        class="c_destructive fs_xs fw_medium mt_4px"
      >
        Error
      </span>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with value 1`] = `
<div>
  <div
    class="d_flex flex-d_column ai_stretch gap_8px w_100%"
  >
    <label
      class="fs_sm fw_medium c_text.primary"
      for="Test"
    >
      Test
    </label>
    <div
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <input
        class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_transparent c_text.primary ring_none trs_all_0.2s focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) disabled:op_0.5 disabled:cursor_not-allowed "
        id="Test"
        value="Value"
      />
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with value and error 1`] = `
<div>
  <div
    class="d_flex flex-d_column ai_stretch gap_8px w_100%"
  >
    <label
      class="fs_sm fw_medium c_text.primary"
      for="Test"
    >
      Test
    </label>
    <div
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <input
        class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_transparent c_text.primary ring_none trs_all_0.2s focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) disabled:op_0.5 disabled:cursor_not-allowed "
        id="Test"
        value="Value"
      />
      <span
        class="c_destructive fs_xs fw_medium mt_4px"
      >
        Error
      </span>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected without a label 1`] = `
<div>
  <div
    class="d_flex flex-d_column ai_stretch gap_8px w_100%"
  >
    <div
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <input
        class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_transparent c_text.primary ring_none trs_all_0.2s focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) disabled:op_0.5 disabled:cursor_not-allowed "
        id="Test"
      />
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render elements as a row 1`] = `
<div>
  <div
    class="d_flex flex-d_row ai_center gap_16px w_100%"
  >
    <label
      class="fs_sm fw_medium c_text.primary"
      for="Test"
    >
      Test
    </label>
    <div
      style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
    >
      <input
        class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_transparent c_text.primary ring_none trs_all_0.2s focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) disabled:op_0.5 disabled:cursor_not-allowed "
        id="Test"
      />
    </div>
  </div>
</div>
`;
